oxiplate-derive/tests/broken/derive/extension-and-colon.stderr
error: proc-macro derive panicked
 --> tests/broken/derive/extension-and-colon.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: not implemented: Must provide either an external or internal template:
          External: #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
          Internal: #[oxiplate_inline(html: "{ your_var }")]
